--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
         // Curated list: replace these IDs with real GIST IDs to display titles and description automatically.
         const curated = [
             /* Example: 'a1b2c3d4e5f6g7h8i9j0' */
+            '42d91031604aaedc0ec5a879afb3410f',
             '7be00d6be71fab970210006b9574e1e5',
             '37d64e4e0527f6e5f9d57280669ad055',
             '31b5bc527b07406950618a7e6bd1ec81',
-            '7246dfafa76973c6cc60ac5fa5ce0858'
+            '7246dfafa76973c6cc60ac5fa5ce0858',
+            'f0bf8c89dda97ef42b5ba3575ab20363'
         ];
 
         const container = document.getElementById('gist-list');
@@ -99,13 +101,24 @@
                         continue;
                     }
                     const gist = await fetchGist(id);
-                    const title = gist.description || Object.keys(gist.files)[0] || id;
-                    const fileList = Object.keys(gist.files).map(fn => `<span style="margin-right:8px">${fn}</span>`).join('');
-                    const html = [
-                        `<a href="${gist.html_url}" target="_blank" rel="noopener noreferrer">${escapeHtml(title)}</a>`,
-                        `<div class="meta">${escapeHtml(gist.description || '')}</div>`,
-                        `<div class="meta" style="margin-top:8px">Files: ${fileList}</div>`
-                    ].join('');
+                        // Derive a clean title from the first filename: strip leading special
+                        // characters (like dots) and remove the extension (e.g. `.md`).
+                        function titleFromFilename(fn){
+                            if(!fn) return '';
+                            // remove leading non-alphanumeric characters (dots, underscores, etc.)
+                            let name = fn.replace(/^[^a-zA-Z0-9]+/, '');
+                            // remove final extension (e.g. .md, .txt)
+                            name = name.replace(/\.[^/.]+$/, '');
+                            return name || fn;
+                        }
+
+                        const firstFile = Object.keys(gist.files)[0];
+                        const title = titleFromFilename(firstFile) || gist.description || id;
+                        const fileList = Object.keys(gist.files).map(fn => `<span style="margin-right:8px">${escapeHtml(fn)}</span>`).join('');
+                        const html = [
+                            `<a href="${gist.html_url}" target="_blank" rel="noopener noreferrer">${escapeHtml(title)}</a>`,
+                            `<div class="meta">${escapeHtml(gist.description || '')}</div>`
+                        ].join('');
                     wrapper.innerHTML = html;
                 }catch(err){
                     wrapper.innerHTML = '<strong>Unable to load gist: ' + escapeHtml(id) + '</strong><div class="meta">' + escapeHtml(err.message) + '</div>';
