--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="assets/theme.js" defer></script>
 </head>
 <body>
-    <section class="hero" style="background:linear-gradient(to bottom, rgba(0,0,0,0.20), rgba(0,0,0,0.28)), url('assets/images/bike-in-summer.jpg');background-size:cover;background-position:center">
+    <section class="hero" style="background:linear-gradient(to bottom, rgba(0,0,0,0.20), rgba(0,0,0,0.28)), url('assets/images/bike-in-summer.png');background-size:cover;background-position:center">
         <div class="hero-inner">
             <h2 style="margin:0 0 8px 0">Github Pages</h2>
             <p class="small" style="margin:0">A lightweight index of tools and knowledge that I share publicly.</p>
