Adjust position of theme button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="hero">
+        <div class="hero-theme" aria-label="Theme toggle">
+            <button class="theme-toggle" data-theme-toggle aria-pressed="false" title="Toggle theme"></button>
+        </div>
         <div class="hero-inner">
                 <div class="container">
                     <h2>Github Pages</h2>
@@ -29,9 +32,6 @@
                 <h1>Alex Atkinson</h1>
                 <div class="sub">Dev*Ops, Infrastructure, and Platform Engineer</div>
             </div>
-        </div>
-        <div class="header-right">
-            <button class="theme-toggle" data-theme-toggle aria-pressed="false" title="Toggle theme"></button>
         </div>
         </header>
 
