--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/theme.js" defer></script>
 </head>
 <body>
-    <div class="hero">
+    <div class="hero" fetchpriority="high">
         <div class="hero-theme" aria-label="Theme toggle">
             <button class="theme-toggle" data-theme-toggle aria-pressed="false" title="Toggle theme"></button>
         </div>
