--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
         <header>
         <div class="header-left">
             <div class="avatar-wrap">
-                                <img
-                                    class="avatar"
-                                    fetchpriority="high"
-                                    srcset="assets/images/avatar-alex-in-summer_128.webp 128w, assets/images/avatar-alex-in-summer_256.webp 256w, assets/images/avatar-alex-in-summer_512.webp 512w"
-                                    sizes="(max-width:520px) 48px, 72px"
-                                    src="assets/images/avatar-alex-in-summer.webp"
-                                    alt="Alex Atkinson avatar"
-                                    loading="lazy">
+                <img
+                    class="avatar"
+                    fetchpriority="high"
+                    srcset="assets/images/avatar-alex-in-summer_128.webp 128w, assets/images/avatar-alex-in-summer_256.webp 256w, assets/images/avatar-alex-in-summer_512.webp 512w"
+                    sizes="(max-width:520px) 48px, 72px"
+                    src="assets/images/avatar-alex-in-summer.webp"
+                    alt="Alex Atkinson avatar"
+                    loading="lazy">
             </div>
             <div>
                 <h1>Alex Atkinson</h1>
-                <div class="sub">Dev*Ops, Infrastructure, and Platform Engineer</div>
+                <div class="sub">Dev*Ops, Infra, and Platform Engineering</div>
             </div>
         </div>
         </header>
@@ -47,12 +47,8 @@
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
-                    Modern technologies are dependent upon a broad landscape of varying disciplines and deep expertise to be well executed. These articles and tools are authored with the greatest hope that they improve Quality of Life for both ourselves and our customers.
-                    <br>In short: A 4-hour work week for us, and amazing UX for them.
-                </p>
-                <h2>A Note to Founders & Product Owners</h2>
-                <p class="small">
-                    As time to market shrinks daily, it's less about the idea than the execution than ever. Having a solid foundation in DevOps, Infrastructure, Security, and Compliance is critical to delivering reliable, scalable, and maintainable products. The resources here can help your team build that foundation efficiently.
+                    Modern technologies are dependent upon a broad landscape of varying disciplines and deep expertise to be well executed. These articles and tools are authored with the greatest hope that they improve Quality of Life for both ourselves and our customers.<br>
+                    In short: A 4-hour work week for us, and amazing UX for them.
                 </p>
             </section>
 
