--- a/page-template.html
+++ b/page-template.html
@@ -7,19 +7,11 @@
   <meta name="description" content="Describe this page briefly." />
   <link rel="stylesheet" href="assets/theme.css">
   <script src="assets/theme.js" defer></script>
+  <script src="assets/header-loader.js" defer></script>
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <div>
-        <h1>New Page</h1>
-        <div class="sub">Short description or subtitle</div>
-      </div>
-      <div style="text-align:right">
-        <button class="theme-toggle" data-theme-toggle aria-pressed="false" title="Toggle theme">Toggle</button>
-        <div style="display:inline-block;margin-left:8px" class="pill"><a href="/" style="color:inherit;text-decoration:none">Home</a></div>
-      </div>
-    </header>
+    <!-- header injected at runtime from assets/header.html -->
 
     <main>
       <section class="card">
