--- a/assets/header.html
+++ b/assets/header.html
@@ -35,51 +35,46 @@
   const btn = wrap.querySelector('.hamburger');
   const menu = wrap.querySelector('.menu-dropdown');
   let closeTimer = null;
-  const CLOSE_DELAY = 2000; // ms
+  const CLOSE_DELAY = 2000; // ms to wait after mouse-off/blur
   function scheduleClose(){
     clearTimeout(closeTimer);
+    console.log('menu:scheduleClose - scheduling in', CLOSE_DELAY);
     closeTimer = setTimeout(() => {
+      console.log('menu:timer fired - checking state');
       const pointerOver = wrap.matches(':hover') || btn.matches(':hover') || menu.matches(':hover');
-      const focusedInside = wrap.contains(document.activeElement);
-      if(!pointerOver && !focusedInside) closeMenu();
+      const active = document.activeElement;
+      // only treat anchors or actual menuitem elements as interactive focus that should keep the menu open
+      const interactiveFocused = !!(active && (active.tagName === 'A' || (active.closest && active.closest('[role="menuitem"]'))));
+      const focusedInside = wrap.contains(active) && interactiveFocused;
+      console.log('menu:state', {pointerOver, focusedInside, active: active && active.tagName});
+      if(!pointerOver && !focusedInside) {
+        console.log('menu:closing (timer)');
+        closeMenu();
+      } else {
+        console.log('menu:not closing - user re-entered or focused; not rescheduling');
+      }
     }, CLOSE_DELAY);
   }
   function cancelClose(){ clearTimeout(closeTimer); closeTimer = null; }
 
-  // use document-level pointerover/pointerout for reliable enter/leave detection
-  let globalOver = null, globalOut = null;
-  function attachGlobalPointerWatcher(){
-    if(globalOver) return;
-    globalOver = function(e){ if(wrap.contains(e.target)) cancelClose(); else scheduleClose(); };
-    globalOut = function(e){
-      // pointerout fires before pointerover on new element; check current hovered element
-      const hovered = document.elementFromPoint && (document.elementFromPoint(e.clientX, e.clientY));
-      if(hovered && wrap.contains(hovered)) cancelClose(); else scheduleClose();
-    };
-    document.addEventListener('pointerover', globalOver);
-    document.addEventListener('pointerout', globalOut);
-  }
-  function detachGlobalPointerWatcher(){
-    if(!globalOver) return;
-    document.removeEventListener('pointerover', globalOver);
-    document.removeEventListener('pointerout', globalOut);
-    globalOver = null; globalOut = null;
-  }
   function closeMenu(){
+    // cancel any pending auto-close timer and close
+    cancelClose();
     btn.setAttribute('aria-expanded','false');
     menu.hidden = true;
     wrap.classList.remove('open');
+    console.log('menu:closed');
   }
   function openMenu(){
+    // clear any pending close timer when explicitly opening
+    cancelClose();
     btn.setAttribute('aria-expanded','true');
     menu.hidden = false;
     wrap.classList.add('open');
-    // focus first menu item if available
-    const first = menu.querySelector('[role="menuitem"]');
-    if(first) first.focus(); else menu.focus();
-    // start a scheduled close in case user moves away
-    scheduleClose();
-    attachGlobalPointerWatcher();
+    // do not move focus into the menu automatically (avoid blocking auto-close)
+    // keep focus where it was (button) so pointer/hover controls determine auto-close
+    btn.focus();
+    console.log('menu:opened');
   }
   btn.addEventListener('click', function(e){
     const expanded = btn.getAttribute('aria-expanded') === 'true';
@@ -93,20 +88,18 @@
   btn.addEventListener('keydown', function(e){ if(e.key === 'Escape') closeMenu(); });
   menu.addEventListener('keydown', function(e){ if(e.key === 'Escape') { btn.focus(); closeMenu(); } });
 
-  // auto-close: cancel when mouse/focus enters, schedule when leaves
-  wrap.addEventListener('mouseenter', cancelClose);
-  wrap.addEventListener('mouseleave', scheduleClose);
+  // auto-close: use pointer events + focus events for robustness across input types
+  wrap.addEventListener('pointerenter', function(){ console.log('menu:pointerenter'); cancelClose(); }, {passive:true});
+  wrap.addEventListener('pointerleave', function(){ console.log('menu:pointerleave'); scheduleClose(); }, {passive:true});
   btn.addEventListener('focus', cancelClose);
   btn.addEventListener('blur', scheduleClose);
   menu.addEventListener('focusin', cancelClose);
   menu.addEventListener('focusout', scheduleClose);
 
-  // Ensure we detach the global watcher when menu closes
-  const origClose = closeMenu;
-  closeMenu = function(){
-    detachGlobalPointerWatcher();
-    cancelClose();
-    origClose();
-  };
+  // if user clicks/taps outside the menu, start the close timer (but don't close immediately)
+  document.addEventListener('pointerdown', function(e){
+    console.log('menu:pointerdown', e.target);
+    if(!wrap.contains(e.target)) scheduleClose(); else cancelClose();
+  }, {passive:true});
 })();
 </script>
