--- a/page-template.html
+++ b/page-template.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>New Page — pages.evilkittens.co</title>
+  <title>New Page — evilkittens.co</title>
   <meta name="description" content="Describe this page briefly." />
+  <link rel="canonical" href="https://evilkittens.co/" />
   <link rel="stylesheet" href="assets/theme.css">
   <script src="assets/theme.js" defer></script>
   <script src="assets/header-loader.js" defer></script>
@@ -21,7 +22,7 @@
     </main>
 
     <footer>
-      <div>Hosted at <a href="https://pages.evilkittens.co" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">pages.evilkittens.co</a></div>
+      <div>Hosted at <a href="https://evilkittens.co" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">evilkittens.co</a></div>
     </footer>
   </div>
 </body>
