--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Alex Atkinson — pages.evilkittens.co</title>
+    <title>Alex Atkinson @ evilkittens.co</title>
     <meta name="description" content="Curated index of useful GISTs." />
-    <link rel="canonical" href="https://pages.evilkittens.co/" />
+    <link rel="canonical" href="https://evilkittens.co/" />
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/theme.css">
     <script src="assets/theme.js" defer></script>
