--- a/page-template.html
+++ b/page-template.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Describe this page briefly." />
   <link rel="canonical" href="https://evilkittens.co/" />
   <link rel="stylesheet" href="assets/theme.css">
+  <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
   <script src="assets/theme.js" defer></script>
   <script src="assets/header-loader.js" defer></script>
 </head>
