--- a/articles.html
+++ b/articles.html
@@ -6,6 +6,8 @@
     <title>Alex Atkinson @ evilkittens.co - Articles</title>
     <meta name="description" content="Curated index of useful GISTs." />
     <link rel="canonical" href="https://evilkittens.co/articles.html" />
+    <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/theme.css">
     <script src="assets/theme.js" defer></script>
