--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Alex Atkinson @ evilkittens.co</title>
     <meta name="description" content="Curated index of useful GISTs." />
     <link rel="canonical" href="https://evilkittens.co/" />
+    <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/theme.css">
     <script src="assets/theme.js" defer></script>
@@ -29,7 +31,7 @@
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
-                    I'm pleased that you're here.<br>
+                    I'm pleased you're here.<br>
                     Take a look around. You're sure to find something interesting.
                 </p>
             </section>
