--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="hero-inner">
                 <div class="container">
                     <h2>Welcome</h2>
+                <p class="small">I built this site. Nifty, eh?</p>
                 </div>
         </div>
     </div>
@@ -31,8 +32,15 @@
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
-                    I'm pleased you're here.<br>
-                    Take a look around. You're sure to find something interesting.
+                    I live for getting the best out of people and technology, and take great pride in seeing folks succeed. To this end I've authored much organizational and technical documentation, and over time I found that GISTs were an easy way share knowledge. The content ranges from scripts to full guides and primers on various topics.<br>
+                    I've been asked if I had a table of contents, or a blog (<i>shudder</i>) -- so now I do.
+                </p>
+                <p class="small">
+                    The strong focus on fundamentals is because these are the areas where I've most often seen folks get into trouble. One article which has proven itself to be highly valuable in mitigating avoidable pain and expense is: <i>Domain Names, DNS, and URLs for DevOps and Friends.</i>
+                </p>
+                <p class="small">
+                    Look around. There are no pay-walls here. No ads. No tracking. Just knowledge, freely shared.<br>
+                    But if you do find that something has saved you a few million, or even just a few hundy, consider <a href="https://buymeacoffee.com/evilkittenlord" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">buying me a coffee</a> to say thanks.
                 </p>
             </section>
         </main>
