--- a/articles.html
+++ b/articles.html
@@ -31,14 +31,14 @@
 
         <main>
             <section class="card" id="intro">
-                <h1>Introduction</h1>
+                <h1>Quality of Life</h1>
                 <p class="small">
                     Modern technologies are dependent upon a broad landscape of varying disciplines and deep expertise to be well executed. These articles and tools are authored with the greatest hope that they improve Quality of Life for both ourselves and our customers.<br>
                     In short: A 4-hour work week for us, and amazing UX for them.
                 </p>
                 <h2>Why GISTs?</h2>
                 <p class="small">
-                    They started as a way to easily share discrete assets, scripts, and notes. I can't stomach a paywall, and I don't want to be a "writer" per se, but the amount of AI drivel and "sponsored" material out there makes clear the need for concise, and accessible knowledge.
+                    They started as a way to easily share discrete assets, scripts, and notes. I can't stomach a paywall, and I don't want to be a "writer" per se, but the amount of AI drivel and sponsored-agenda driven material out there makes clear the need for concise, and accessible knowledge.
                 </p>
             </section>
 
