Social media buttons and styling fixes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/theme.css">
     <script src="assets/theme.js" defer></script>
-    <script src="assets/header-loader.js" defer></script>
+        <script src="assets/header-loader.js" defer></script>
+        <script src="assets/hero-controls-loader.js" defer></script>
 </head>
 <body>
     <div class="hero" fetchpriority="high">
-        <div class="hero-theme" aria-label="Theme toggle">
-            <button class="theme-toggle" data-theme-toggle aria-pressed="false" title="Toggle theme"></button>
-        </div>
         <div class="hero-inner">
                 <div class="container">
                     <h2>Welcome</h2>
