--- a/page-template.html
+++ b/page-template.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
   <script src="assets/theme.js" defer></script>
   <script src="assets/header-loader.js" defer></script>
+  <script src="assets/hero-controls-loader.js" defer></script>
 </head>
 <body>
   <div class="wrap">
