Fix Avatar popup

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
-                    I live for getting the best out of people and technology, and take great pride in seeing folks succeed. To this end I've authored much organizational and technical documentation, and over time I found that GISTs were an easy way share knowledge. The content ranges from scripts to full guides and primers on various topics.<br>
+                    I live for getting the best out of people and technology, and take great pride in seeing folks succeed. To this end I've authored much organizational and technical documentation, and over time found that GISTs were an easy way share knowledge. The content ranges from scripts to full guides and primers on various topics.<br>
                     I've been asked if I had a table of contents, or a blog (<i>shudder</i>) -- so now I do.
                 </p>
                 <p class="small">
