--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <p class="small">
                     Look around. There are no pay-walls here. No ads. No tracking. Just knowledge, freely shared.<br>
-                    But if you do find that something has saved you a few million, or even just a few hundy, consider <a href="https://buymeacoffee.com/evilkittenlord" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">buying me a coffee</a> to say thanks.
+                    But if you do find that something has saved you a few million, or even just a few hundy, consider <a href="https://buymeacoffee.com/evilkittenlord" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">buying me a coffee</a>.
                 </p>
             </section>
         </main>
