Add about page. Componentize the menu.

--- a/page-template.html
+++ b/page-template.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="wrap">
-    <!-- header injected at runtime from assets/header.html -->
+    <!-- header injected at runtime from assets/components/header.html -->
 
     <main>
       <section class="card">
