--- a/articles.html
+++ b/articles.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="wrap">
-        <!-- header injected at runtime from assets/header.html -->
+        <!-- header injected at runtime from assets/components/header.html -->
 
         <main>
             <section class="card" id="intro">
